--- a/src/colab_test.ipynb
+++ b/src/colab_test.ipynb
@@ -21,57 +21,11 @@
     },
     "colab": {
       "name": "colab_test.ipynb",
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     }
   },
   "cells": [
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "KPWYdP8V8p9x",
-        "colab_type": "code",
-        "colab": {},
-        "outputId": "e8604ecc-7d9b-4103-9d24-7adf7401d837"
-      },
-      "source": [
-        "print(\"Hello world\")"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Hello world\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Jec9Jn858p99",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "1d0c5f38-02b3-4111-9588-b56090319c44"
-      },
-      "source": [
-        "print('poop')"
-      ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "poop\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
     {
       "cell_type": "code",
       "metadata": {
@@ -80,7 +34,138 @@
         "colab": {}
       },
       "source": [
-        ""
+        "from collections import defaultdict\n",
+        "import os\n",
+        "import pickle\n",
+        "from tqdm import tqdm\n",
+        "import random\n",
+        "import math\n",
+        "\n",
+        "import numpy as np\n",
+        "from sklearn.metrics import cohen_kappa_score\n",
+        "from sklearn.feature_extraction import DictVectorizer\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.nn.functional as F\n",
+        "from torch.optim import Adam, SGD, AdamW\n",
+        "\n",
+        "import models\n",
+        "import data_utils\n",
+        "import evaluate\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ahYg0bRx-Xdc",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def train_lstm(args, model, X, y):\n",
+        "\n",
+        "\n",
+        "    # Data loaders\n",
+        "    loader_train = data_loader(X['train'], y['train'],\n",
+        "            batch_size=args.batch_size, shuffle_idx=True)\n",
+        "    n_train_batches = math.ceil(len(X['train']) / args.batch_size)\n",
+        "\n",
+        "    # Optimizer\n",
+        "    opt = Adam(model.parameters(), lr=args.lr, betas=[0.9, 0.9])\n",
+        "\n",
+        "    # Train loop\n",
+        "    try:\n",
+        "        for e in range(args.epochs):\n",
+        "            for b in tqdm(\n",
+        "                    range(n_train_batches), \n",
+        "                    ascii=True, \n",
+        "                    desc=f'Epoch {e+1}/{args.epochs} progress', \n",
+        "                    ncols=80):\n",
+        "                opt.zero_grad()\n",
+        "                sents, sent_lens, preds, heads, labels = next(loader_train)\n",
+        "                logits = model(sents, sent_lens, preds, heads)\n",
+        "                loss = bce_loss(logits, labels)\n",
+        "                loss.backward()\n",
+        "                opt.step()\n",
+        "\n",
+        "    except KeyboardInterrupt:\n",
+        "        pass\n",
+        "    # End of train loop\n",
+        "    return\n",
+        "\n",
+        "\n",
+        "def bce_loss(logits, labels):\n",
+        "    # Expected labels : (B, num_properties)\n",
+        "    loss = F.binary_cross_entropy_with_logits(logits, labels)\n",
+        "    return loss\n",
+        "\n",
+        "\n",
+        "def data_loader(X, y, batch_size=None, shuffle_idx=False):\n",
+        "    data = list(zip(X, y))\n",
+        "    idx = list(range(len(data)))\n",
+        "    while True:\n",
+        "        if shuffle_idx:\n",
+        "            random.shuffle(idx) # In-place shuffle\n",
+        "        \n",
+        "        for span in idx_spans(idx, batch_size):\n",
+        "            batch = [data[i] for i in span]\n",
+        "            yield prepare_batch(batch)\n",
+        "\n",
+        "\n",
+        "def idx_spans(idx, span_size):\n",
+        "    for i in range(0, len(idx), span_size):\n",
+        "        yield idx[i:i+span_size]\n",
+        "\n",
+        "\n",
+        "def prepare_batch(batch):\n",
+        "    # batch[i] = X, y\n",
+        "    batch_size = len(batch)\n",
+        "    sent_lens = torch.LongTensor([len(x[0][0]) for x in batch])\n",
+        "    max_length = torch.max(sent_lens).item()\n",
+        "    n_properties = len(batch[0][1])\n",
+        "\n",
+        "    # Zero is padding index\n",
+        "    sents = torch.zeros((batch_size, max_length)).long()\n",
+        "    preds = torch.zeros(batch_size).long()\n",
+        "    heads = torch.zeros(batch_size).long()\n",
+        "    labels = torch.zeros(batch_size, n_properties)\n",
+        "\n",
+        "    for i, (X_batch, y_batch) in enumerate(batch):\n",
+        "        sent, (pred_idx, head_idx) = X_batch\n",
+        "        sents[i,:len(sent)] = torch.LongTensor(sent)\n",
+        "        preds[i] = pred_idx\n",
+        "        heads[i] = head_idx\n",
+        "        labels[i] = torch.tensor(y_batch)\n",
+        "\n",
+        "    return sents, sent_lens, preds, heads, labels"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dUbR-mhy-dRb",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "random.seed(args.seed)\n",
+        "torch.manual_seed(args.seed)\n",
+        "np.random.seed(args.seed)\n",
+        "\n",
+        "model = models.LSTM(\n",
+        "                vocab_size=len(w2i),\n",
+        "                emb_size=int(args.glove_d),\n",
+        "                h_size=args.h_size,\n",
+        "                padding_idx=w2i[PAD_TOKEN],\n",
+        "                emb_np=emb_np,\n",
+        "                properties=PROPERTIES)\n",
+        "\n",
+        "train_lstm(model, X, y)"
       ],
       "execution_count": 0,
       "outputs": []
