--- a/src/colab_test.ipynb
+++ b/src/colab_test.ipynb
@@ -66,23 +66,26 @@
       },
       "source": [
         "def train_lstm(args, model, X, y):\n",
+        "    epochs = args['epochs']\n",
+        "    batch_size = args['batch_size']\n",
+        "    lr = args['lr']\n",
         "\n",
         "\n",
         "    # Data loaders\n",
         "    loader_train = data_loader(X['train'], y['train'],\n",
-        "            batch_size=args.batch_size, shuffle_idx=True)\n",
-        "    n_train_batches = math.ceil(len(X['train']) / args.batch_size)\n",
+        "            batch_size=batch_size, shuffle_idx=True)\n",
+        "    n_train_batches = math.ceil(len(X['train']) / batch_size)\n",
         "\n",
         "    # Optimizer\n",
-        "    opt = Adam(model.parameters(), lr=args.lr, betas=[0.9, 0.9])\n",
+        "    opt = Adam(model.parameters(), lr=lr], betas=[0.9, 0.9])\n",
         "\n",
         "    # Train loop\n",
         "    try:\n",
-        "        for e in range(args.epochs):\n",
+        "        for e in range(epochs):\n",
         "            for b in tqdm(\n",
         "                    range(n_train_batches), \n",
         "                    ascii=True, \n",
-        "                    desc=f'Epoch {e+1}/{args.epochs} progress', \n",
+        "                    desc=f'Epoch {e+1}/{epochs} progress', \n",
         "                    ncols=80):\n",
         "                opt.zero_grad()\n",
         "                sents, sent_lens, preds, heads, labels = next(loader_train)\n",
@@ -153,9 +156,20 @@
         "colab": {}
       },
       "source": [
-        "random.seed(args.seed)\n",
-        "torch.manual_seed(args.seed)\n",
-        "np.random.seed(args.seed)\n",
+        "args = {\n",
+        "    'epochs': 3,\n",
+        "    'seed': 7,\n",
+        "    \n",
+        "}\n",
+        "\n",
+        "seed = args['seed']\n",
+        "random.seed(seed)\n",
+        "torch.manual_seed(seed)\n",
+        "np.random.seed(seed)\n",
+        "\n",
+        "w2i, i2w = data['dicts']\n",
+        "emb_np = data['emb_np']\n",
+        "X, y = data['lstm_data']\n",
         "\n",
         "model = models.LSTM(\n",
         "                vocab_size=len(w2i),\n",
