--- a/src/colab_test.ipynb
+++ b/src/colab_test.ipynb
@@ -21,11 +21,68 @@
     },
     "colab": {
       "name": "colab_test.ipynb",
-      "provenance": [],
-      "toc_visible": true
+      "provenance": []
     }
   },
   "cells": [
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "POJfkUeHELGD",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "05737bc8-47f1-4d5b-db93-81be8ab97d33"
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZWk4rHFeGXuJ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import os\n",
+        "\n",
+        "DATA_DIR = 'content/drive/My\\ Drive/proto_data/'\n",
+        "PICKLED_DIR = os.path.join(DATA_DIR, 'pickled/')\n",
+        "#CONLLU_DIR = os.path.join(DATA_DIR, 'WSJ_conllus/')\n",
+        "#MODEL_DIR = '../saved_models/'\n",
+        "\n",
+        "PROTO_TSV = os.path.join(DATA_DIR, 'protoroles_eng_pb_08302015.tsv')\n",
+        "#GLOVE_FILE = {'100': os.path.join(DATA_DIR, 'glove.6B.100d.txt') }\n",
+        "\n",
+        "SPLITS = ['train', 'dev', 'test'] \n",
+        "\n",
+        "PROPERTIES = ['instigation', 'volition', 'awareness', 'sentient',\n",
+        "'exists_as_physical', 'existed_before', 'existed_during', 'existed_after',\n",
+        "'created', 'destroyed', 'predicate_changed_argument', 'change_of_state', \n",
+        "'changes_possession', 'change_of_location', 'stationary', 'location_of_event', \n",
+        "'makes_physical_contact', 'manipulated_by_another']\n",
+        "\n",
+        "PAD_TOKEN = '<pad>'\n",
+        "UNK_TOKEN = '<unk>'\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
     {
       "cell_type": "code",
       "metadata": {
@@ -42,17 +99,11 @@
         "import math\n",
         "\n",
         "import numpy as np\n",
-        "from sklearn.metrics import cohen_kappa_score\n",
-        "from sklearn.feature_extraction import DictVectorizer\n",
-        "from sklearn.linear_model import LogisticRegression\n",
         "import torch\n",
         "import torch.nn as nn\n",
         "import torch.nn.functional as F\n",
         "from torch.optim import Adam, SGD, AdamW\n",
-        "\n",
-        "import models\n",
-        "import data_utils\n",
-        "import evaluate\n"
+        "\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -62,7 +113,11 @@
       "metadata": {
         "id": "ahYg0bRx-Xdc",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 132
+        },
+        "outputId": "a77fad0b-2478-4f08-885a-b9073c2ea2f4"
       },
       "source": [
         "def train_lstm(args, model, X, y):\n",
@@ -77,7 +132,7 @@
         "    n_train_batches = math.ceil(len(X['train']) / batch_size)\n",
         "\n",
         "    # Optimizer\n",
-        "    opt = Adam(model.parameters(), lr=lr], betas=[0.9, 0.9])\n",
+        "    opt = Adam(model.parameters(), lr=lr, betas=[0.9, 0.9])\n",
         "\n",
         "    # Train loop\n",
         "    try:\n",
@@ -145,6 +200,83 @@
         "\n",
         "    return sents, sent_lens, preds, heads, labels"
       ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-81eef3b903bb>\"\u001b[0;36m, line \u001b[0;32m13\u001b[0m\n\u001b[0;31m    opt = Adam(model.parameters(), lr=lr], betas=[0.9, 0.9])\u001b[0m\n\u001b[0m                                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ec5YvM4uHvsc",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def get_data(args):\n",
+        "    df = pd.read_csv(PROTO_TSV, sep='\\t')\n",
+        "\n",
+        "    # Sentences\n",
+        "    sent_ids = set(df['Sentence.ID'].tolist())\n",
+        "    path = os.path.join(PICKLED_DIR, 'sents.pkl')\n",
+        "    sents = None\n",
+        "    with open(path, 'rb') as f:\n",
+        "      sents = pickle.load(f)\n",
+        "\n",
+        "    # Dependency data\n",
+        "    path = os.path.join(PICKLED_DIR, 'dependencies.pkl')\n",
+        "    with open(path, 'wb') as f:\n",
+        "      #sent_ids = list(sents['raw'].keys())\n",
+        "      deps, deps_just_tokens = data_utils.get_dependencies(sent_ids)\n",
+        "      pickle.dump((deps, deps_just_tokens), f)\n",
+        "    sents['dependencies'] = deps\n",
+        "    sents['deps_just_tokens'] = deps_just_tokens\n",
+        "\n",
+        "    # Instances\n",
+        "    path = os.path.join(PICKLED_DIR, 'instances.pkl')\n",
+        "    proto_instances = None\n",
+        "    possible = None # Data to compare to SPRL paper\n",
+        "    with open(path, 'rb') as f:\n",
+        "      proto_instances, possible = pickle.load(f)\n",
+        "\n",
+        "    # Word embedding data\n",
+        "    w2e = None\n",
+        "    path = os.path.join(PICKLED_DIR, f'glove_{args.glove_d}.pkl')\n",
+        "    with open(path, 'rb') as f:\n",
+        "      w2e = pickle.load(f)\n",
+        "\n",
+        "    w2i, i2w = None, None\n",
+        "    emb_np = None\n",
+        "    X, y = None, None\n",
+        "    dicts_path = os.path.join(PICKLED_DIR, 'dicts.pkl')\n",
+        "    with open(dicts_path, 'rb') as f:\n",
+        "        w2i, i2w = pickle.load(f)\n",
+        "    \n",
+        "    emb_np_path = os.path.join(PICKLED_DIR, 'emb_np.pkl')\n",
+        "    with open(emb_np_path, 'rb') as f:\n",
+        "        emb_np = pickle.load(f)\n",
+        "    \n",
+        "    lstm_data_path = os.path.join(PICKLED_DIR, 'lstm_data.pkl')\n",
+        "    with open(lstm_data_path, 'rb') as f:\n",
+        "        X, y = pickle.load(f)\n",
+        "\n",
+        "    return {'df': df, \n",
+        "            'proto_instances': proto_instances, \n",
+        "            'possible': possible,\n",
+        "            'sents': sents,\n",
+        "            'w2e': w2e,\n",
+        "            'sent_ids': sent_ids,\n",
+        "            'lstm_data': (X,y),\n",
+        "            'dicts': (w2i, i2w),\n",
+        "            'emb_np': emb_np}\n"
+      ],
       "execution_count": 0,
       "outputs": []
     },
@@ -159,13 +291,20 @@
         "args = {\n",
         "    'epochs': 3,\n",
         "    'seed': 7,\n",
-        "    \n",
+        "    'lr': 1e-3,\n",
+        "    'batch_size': 10,\n",
+        "    'h_size': 100,\n",
+        "    'glove_d': 100\n",
         "}\n",
         "\n",
         "seed = args['seed']\n",
+        "\n",
         "random.seed(seed)\n",
         "torch.manual_seed(seed)\n",
         "np.random.seed(seed)\n",
+        "\n",
+        "\n",
+        "data = \n",
         "\n",
         "w2i, i2w = data['dicts']\n",
         "emb_np = data['emb_np']\n",
@@ -179,7 +318,7 @@
         "                emb_np=emb_np,\n",
         "                properties=PROPERTIES)\n",
         "\n",
-        "train_lstm(model, X, y)"
+        "train_lstm(args, model, X, y)"
       ],
       "execution_count": 0,
       "outputs": []
