--- a/src/colab_test.ipynb
+++ b/src/colab_test.ipynb
@@ -34,13 +34,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "05737bc8-47f1-4d5b-db93-81be8ab97d33"
+        "outputId": "9011c2f9-2a46-4237-9caf-c4e84b41a88f"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -61,7 +61,7 @@
       "source": [
         "import os\n",
         "\n",
-        "DATA_DIR = 'content/drive/My\\ Drive/proto_data/'\n",
+        "DATA_DIR = '/content/drive/My Drive/proto_data/'\n",
         "PICKLED_DIR = os.path.join(DATA_DIR, 'pickled/')\n",
         "#CONLLU_DIR = os.path.join(DATA_DIR, 'WSJ_conllus/')\n",
         "#MODEL_DIR = '../saved_models/'\n",
@@ -98,6 +98,7 @@
         "import random\n",
         "import math\n",
         "\n",
+        "import pandas as pd\n",
         "import numpy as np\n",
         "import torch\n",
         "import torch.nn as nn\n",
@@ -113,11 +114,7 @@
       "metadata": {
         "id": "ahYg0bRx-Xdc",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 132
-        },
-        "outputId": "a77fad0b-2478-4f08-885a-b9073c2ea2f4"
+        "colab": {}
       },
       "source": [
         "def train_lstm(args, model, X, y):\n",
@@ -200,17 +197,8 @@
         "\n",
         "    return sents, sent_lens, preds, heads, labels"
       ],
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-81eef3b903bb>\"\u001b[0;36m, line \u001b[0;32m13\u001b[0m\n\u001b[0;31m    opt = Adam(model.parameters(), lr=lr], betas=[0.9, 0.9])\u001b[0m\n\u001b[0m                                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -225,17 +213,15 @@
         "\n",
         "    # Sentences\n",
         "    sent_ids = set(df['Sentence.ID'].tolist())\n",
-        "    path = os.path.join(PICKLED_DIR, 'sents.pkl')\n",
+        "    sents_path = os.path.join(PICKLED_DIR, 'sents.pkl')\n",
         "    sents = None\n",
-        "    with open(path, 'rb') as f:\n",
+        "    with open(sents_path, 'rb') as f:\n",
         "      sents = pickle.load(f)\n",
         "\n",
         "    # Dependency data\n",
-        "    path = os.path.join(PICKLED_DIR, 'dependencies.pkl')\n",
-        "    with open(path, 'wb') as f:\n",
-        "      #sent_ids = list(sents['raw'].keys())\n",
-        "      deps, deps_just_tokens = data_utils.get_dependencies(sent_ids)\n",
-        "      pickle.dump((deps, deps_just_tokens), f)\n",
+        "    dependencies_path = os.path.join(PICKLED_DIR, 'dependencies.pkl')\n",
+        "    with open(dependencies_path, 'rb') as f:\n",
+        "      deps, deps_just_tokens = pickle.load(f)\n",
         "    sents['dependencies'] = deps\n",
         "    sents['deps_just_tokens'] = deps_just_tokens\n",
         "\n",
@@ -248,7 +234,7 @@
         "\n",
         "    # Word embedding data\n",
         "    w2e = None\n",
-        "    path = os.path.join(PICKLED_DIR, f'glove_{args.glove_d}.pkl')\n",
+        "    path = os.path.join(PICKLED_DIR, f\"glove_{args['glove_d']}.pkl\")\n",
         "    with open(path, 'rb') as f:\n",
         "      w2e = pickle.load(f)\n",
         "\n",
@@ -285,7 +271,11 @@
       "metadata": {
         "id": "dUbR-mhy-dRb",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 497
+        },
+        "outputId": "1e718a2e-3a0b-4693-b94b-5d9ea90551eb"
       },
       "source": [
         "args = {\n",
@@ -304,7 +294,7 @@
         "np.random.seed(seed)\n",
         "\n",
         "\n",
-        "data = \n",
+        "data = get_data(args)\n",
         "\n",
         "w2i, i2w = data['dicts']\n",
         "emb_np = data['emb_np']\n",
@@ -312,16 +302,31 @@
         "\n",
         "model = models.LSTM(\n",
         "                vocab_size=len(w2i),\n",
-        "                emb_size=int(args.glove_d),\n",
-        "                h_size=args.h_size,\n",
+        "                emb_size=int(args['glove_d']),\n",
+        "                h_size=args['h_size'],\n",
         "                padding_idx=w2i[PAD_TOKEN],\n",
         "                emb_np=emb_np,\n",
         "                properties=PROPERTIES)\n",
         "\n",
         "train_lstm(args, model, X, y)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ModuleNotFoundError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-6-68aca4365294>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0mw2i\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi2w\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'dicts'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-5-e92178807cb9>\u001b[0m in \u001b[0;36mget_data\u001b[0;34m(args)\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mdependencies_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mPICKLED_DIR\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'dependencies.pkl'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdependencies_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m       \u001b[0mdeps\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdeps_just_tokens\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m     \u001b[0msents\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'dependencies'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdeps\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0msents\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'deps_just_tokens'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdeps_just_tokens\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'data_utils'",
+            "",
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+          ]
+        }
+      ]
     }
   ]
 }
