--- a/src/colab_test.ipynb
+++ b/src/colab_test.ipynb
@@ -31,7 +31,7 @@
       "metadata": {
         "id": "POJfkUeHELGD",
         "colab_type": "code",
-        "outputId": "8c327565-384a-4a57-8830-f89597142b1d",
+        "outputId": "623b2c96-abb5-46fe-98b1-41190cf0cba5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -41,7 +41,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 19,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -107,7 +107,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "6e2e04b3-6591-408e-f03a-9889864909ad"
+        "outputId": "542faf3b-b239-427f-bd17-75aeda257e2e"
       },
       "source": [
         "from collections import defaultdict\n",
@@ -129,7 +129,7 @@
         "\n",
         "#import data_utils"
       ],
-      "execution_count": 22,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -171,10 +171,9 @@
         "                vocab_size,\n",
         "                emb_size,\n",
         "                padding_idx=padding_idx)\n",
+        "        self.word_emb.weight.data.copy_(torch.Tensor(emb_np))\n",
         "        self.word_emb.weight.requires_grad = False\n",
         "        \n",
-        "        self.word_emb.weight.data.copy_(torch.Tensor(emb_np))\n",
-        "\n",
         "        self.lstm = nn.LSTM(\n",
         "                input_size=emb_size,    \n",
         "                hidden_size=h_size,\n",
@@ -183,10 +182,18 @@
         "                batch_first=True,\n",
         "                dropout=0.,\n",
         "                bias=True)\n",
+        "        \n",
+        "        concatenated_embs_size = 2*(2*h_size)\n",
+        "        shared_size=concatenated_embs_size\n",
         "\n",
-        "        self.shared = nn.Linear(2*h_size,shared_size, bias=False)\n",
+        "        # 2*(2*h_size) comes from concatenating the two bidirec outs for head, pred\n",
+        "        self.shared = nn.Sequential(\n",
+        "            nn.Linear(concatenated_embs_size, shared_size, bias=True),\n",
+        "            nn.Dropout(0.2),\n",
+        "            nn.ReLU())\n",
+        "\n",
         "        #self.mlps = {p: nn.Linear(2 * h_size, 2) for p in PROPERTIES}\n",
-        "        self.mlp = nn.Linear(2*(2*h_size)*self.n_properties, self.n_properties)\n",
+        "        self.mlp = nn.Linear(shared_size*self.n_properties, self.n_properties, bias=True)\n",
         "\n",
         "\n",
         "    def forward(self, sents, sent_lens, preds, heads):\n",
@@ -219,7 +226,9 @@
         "        head_reps = outputs[np.arange(B), heads] # same as above\n",
         "\n",
         "        # Get pred-arg representation\n",
-        "        mlp_input = torch.cat([pred_reps, head_reps], dim=-1) # (B, 2*h_size)\n",
+        "        shared_input = torch.cat([pred_reps, head_reps], dim=-1) # (B, 2*h_size)\n",
+        "\n",
+        "        mlp_input = self.shared(shared_input) # (B, size_shared)\n",
         "\n",
         "        #logits = {p: None for p in PROPERTIES}\n",
         "        #for p in PROPERTIES:\n",
@@ -235,11 +244,11 @@
         "    def predict(self, sents, sent_lens, preds, heads):\n",
         "\n",
         "        logits = self.forward(sents, sent_lens, preds, heads)\n",
-        "        preds = (logits.sign() + 1) / 2\n",
+        "        predictions = (logits.sign() + 1) / 2\n",
         "        #preds = F.sigmoid(logits)\n",
         "        #preds = argmax(logits, -1) # assuming logits a (num_props X 2) array\n",
         "\n",
-        "        return preds\n",
+        "        return predictions\n",
         " \n",
         "def unsort(batch, indices):\n",
         "    indices_inverted = torch.argsort(indices)\n",
@@ -272,7 +281,7 @@
         "    n_dev_batches = math.ceil(len(X['dev']) / batch_size)\n",
         "\n",
         "    # Optimizer\n",
-        "    opt = Adam(model.parameters(), lr=lr, betas=[0.9, 0.9])\n",
+        "    opt = Adam(model.parameters(), lr=lr, betas=[0.9, 0.999])\n",
         "\n",
         "    # Train loop\n",
         "    try:\n",
@@ -388,17 +397,17 @@
       "source": [
         "def evaluate(args, model, sents, sent_lens, preds, heads, labels):\n",
         "    # Get predictions\n",
-        "    preds = model.predict(sents, sent_lens, preds, heads)\n",
+        "    predictions = model.predict(sents, sent_lens, preds, heads)\n",
         "\n",
-        "    preds, labels = preds.cpu().numpy(), labels.cpu().numpy()\n",
-        "    n_correct = (preds == labels).astype(int).sum()\n",
+        "    predictions, labels = predictions.cpu().numpy(), labels.cpu().numpy()\n",
+        "    n_correct = (predictions == labels).astype(int).sum()\n",
         "\n",
         "    # Precision, Recall\n",
-        "    eq = preds == labels\n",
-        "    neq = preds != labels\n",
+        "    eq = predictions == labels\n",
+        "    neq = predictions != labels\n",
         "\n",
-        "    pos_preds = preds == 1\n",
-        "    neg_preds = preds == 0\n",
+        "    pos_preds = predictions == 1\n",
+        "    neg_preds = predictions == 0\n",
         "\n",
         "    tp = np.where(pos_preds, eq, 0).astype(int).sum()\n",
         "    fp = np.where(pos_preds, neq, 0).astype(int).sum()\n",
@@ -519,7 +528,7 @@
       "metadata": {
         "id": "dUbR-mhy-dRb",
         "colab_type": "code",
-        "outputId": "86adb6dc-4545-4857-b89f-65af0cf760c5",
+        "outputId": "15fb337c-1839-4355-aadc-c5eb90c440a4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 573
@@ -529,10 +538,11 @@
         "args = {\n",
         "    'epochs': 10,\n",
         "    'seed': 7,\n",
-        "    'lr': 1e-3,\n",
+        "    'lr': 2e-3,\n",
         "    'batch_size': 100,\n",
-        "    'h_size': 50,\n",
-        "    'glove_d': 100\n",
+        "    'h_size': 300,\n",
+        "    'shared_size': 300,\n",
+        "    'glove_d': 300\n",
         "}\n",
         "\n",
         "seed = args['seed']\n",
@@ -540,7 +550,6 @@
         "random.seed(seed)\n",
         "torch.manual_seed(seed)\n",
         "np.random.seed(seed)\n",
-        "\n",
         "\n",
         "data = get_data(args)\n",
         "\n",
@@ -552,6 +561,7 @@
         "                vocab_size=len(w2i),\n",
         "                emb_size=int(args['glove_d']),\n",
         "                h_size=args['h_size'],\n",
+        "                shared_size=args['shared_size'],\n",
         "                padding_idx=w2i[PAD_TOKEN],\n",
         "                emb_np=emb_np,\n",
         "                properties=PROPERTIES)\n",
@@ -559,179 +569,179 @@
         "\n",
         "train_lstm(args, model, X, y)"
       ],
-      "execution_count": 63,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Epoch 1/10 progress: 100%|######################| 78/78 [00:04<00:00, 19.36it/s]\n",
-            "Evaluating progress: 100%|######################| 10/10 [00:00<00:00, 32.88it/s]\n",
-            "Epoch 2/10 progress:   4%|8                      | 3/78 [00:00<00:03, 20.43it/s]"
+            "Epoch 1/10 progress: 100%|######################| 78/78 [00:06<00:00, 12.35it/s]\n",
+            "Evaluating progress: 100%|######################| 10/10 [00:00<00:00, 26.73it/s]\n",
+            "Epoch 2/10 progress:   3%|5                      | 2/78 [00:00<00:05, 14.75it/s]"
           ],
           "name": "stderr"
         },
         {
           "output_type": "stream",
           "text": [
-            "Epoch 0, F=61.99, p=72.04, r=54.41\n"
+            "Epoch 0, F=59.35, p=72.39, r=50.29\n"
           ],
           "name": "stdout"
         },
         {
           "output_type": "stream",
           "text": [
-            "Epoch 2/10 progress: 100%|######################| 78/78 [00:04<00:00, 18.76it/s]\n",
-            "Evaluating progress: 100%|######################| 10/10 [00:00<00:00, 32.50it/s]\n",
-            "Epoch 3/10 progress:   3%|5                      | 2/78 [00:00<00:04, 18.89it/s]"
+            "Epoch 2/10 progress: 100%|######################| 78/78 [00:06<00:00, 12.62it/s]\n",
+            "Evaluating progress: 100%|######################| 10/10 [00:00<00:00, 26.59it/s]\n",
+            "Epoch 3/10 progress:   3%|5                      | 2/78 [00:00<00:05, 13.84it/s]"
           ],
           "name": "stderr"
         },
         {
           "output_type": "stream",
           "text": [
-            "Epoch 1, F=61.48, p=72.37, r=53.44\n"
+            "Epoch 1, F=65.10, p=71.29, r=59.89\n"
           ],
           "name": "stdout"
         },
         {
           "output_type": "stream",
           "text": [
-            "Epoch 3/10 progress: 100%|######################| 78/78 [00:03<00:00, 19.88it/s]\n",
-            "Evaluating progress: 100%|######################| 10/10 [00:00<00:00, 32.13it/s]\n",
-            "Epoch 4/10 progress:   4%|8                      | 3/78 [00:00<00:03, 20.82it/s]"
+            "Epoch 3/10 progress: 100%|######################| 78/78 [00:06<00:00, 12.61it/s]\n",
+            "Evaluating progress: 100%|######################| 10/10 [00:00<00:00, 26.23it/s]\n",
+            "Epoch 4/10 progress:   3%|5                      | 2/78 [00:00<00:04, 15.30it/s]"
           ],
           "name": "stderr"
         },
         {
           "output_type": "stream",
           "text": [
-            "Epoch 2, F=63.88, p=70.99, r=58.06\n"
+            "Epoch 2, F=65.97, p=68.36, r=63.75\n"
           ],
           "name": "stdout"
         },
         {
           "output_type": "stream",
           "text": [
-            "Epoch 4/10 progress: 100%|######################| 78/78 [00:03<00:00, 19.87it/s]\n",
-            "Evaluating progress: 100%|######################| 10/10 [00:00<00:00, 31.42it/s]\n",
-            "Epoch 5/10 progress:   3%|5                      | 2/78 [00:00<00:04, 18.01it/s]"
+            "Epoch 4/10 progress: 100%|######################| 78/78 [00:06<00:00, 12.78it/s]\n",
+            "Evaluating progress: 100%|######################| 10/10 [00:00<00:00, 27.11it/s]\n",
+            "Epoch 5/10 progress:   3%|5                      | 2/78 [00:00<00:04, 16.09it/s]"
           ],
           "name": "stderr"
         },
         {
           "output_type": "stream",
           "text": [
-            "Epoch 3, F=64.09, p=71.46, r=58.10\n"
+            "Epoch 3, F=65.82, p=70.91, r=61.41\n"
           ],
           "name": "stdout"
         },
         {
           "output_type": "stream",
           "text": [
-            "Epoch 5/10 progress: 100%|######################| 78/78 [00:04<00:00, 18.69it/s]\n",
-            "Evaluating progress: 100%|######################| 10/10 [00:00<00:00, 33.19it/s]\n",
-            "Epoch 6/10 progress:   3%|5                      | 2/78 [00:00<00:03, 19.90it/s]"
+            "Epoch 5/10 progress: 100%|######################| 78/78 [00:06<00:00, 12.77it/s]\n",
+            "Evaluating progress: 100%|######################| 10/10 [00:00<00:00, 25.99it/s]\n",
+            "Epoch 6/10 progress:   3%|5                      | 2/78 [00:00<00:05, 15.20it/s]"
           ],
           "name": "stderr"
         },
         {
           "output_type": "stream",
           "text": [
-            "Epoch 4, F=64.03, p=70.96, r=58.34\n"
+            "Epoch 4, F=64.33, p=72.25, r=57.97\n"
           ],
           "name": "stdout"
         },
         {
           "output_type": "stream",
           "text": [
-            "Epoch 6/10 progress: 100%|######################| 78/78 [00:04<00:00, 19.21it/s]\n",
-            "Evaluating progress: 100%|######################| 10/10 [00:00<00:00, 29.53it/s]\n",
-            "Epoch 7/10 progress:   4%|8                      | 3/78 [00:00<00:03, 20.23it/s]"
+            "Epoch 6/10 progress: 100%|######################| 78/78 [00:06<00:00, 12.55it/s]\n",
+            "Evaluating progress: 100%|######################| 10/10 [00:00<00:00, 27.35it/s]\n",
+            "Epoch 7/10 progress:   3%|5                      | 2/78 [00:00<00:04, 15.27it/s]"
           ],
           "name": "stderr"
         },
         {
           "output_type": "stream",
           "text": [
-            "Epoch 5, F=62.90, p=71.68, r=56.03\n"
+            "Epoch 5, F=64.80, p=71.87, r=58.99\n"
           ],
           "name": "stdout"
         },
         {
           "output_type": "stream",
           "text": [
-            "Epoch 7/10 progress: 100%|######################| 78/78 [00:04<00:00, 18.34it/s]\n",
-            "Evaluating progress: 100%|######################| 10/10 [00:00<00:00, 31.98it/s]\n",
-            "Epoch 8/10 progress:   3%|5                      | 2/78 [00:00<00:03, 19.23it/s]"
+            "Epoch 7/10 progress: 100%|######################| 78/78 [00:06<00:00, 12.45it/s]\n",
+            "Evaluating progress: 100%|######################| 10/10 [00:00<00:00, 28.64it/s]\n",
+            "Epoch 8/10 progress:   3%|5                      | 2/78 [00:00<00:05, 13.20it/s]"
           ],
           "name": "stderr"
         },
         {
           "output_type": "stream",
           "text": [
-            "Epoch 6, F=62.07, p=72.05, r=54.52\n"
+            "Epoch 6, F=66.27, p=71.41, r=61.83\n"
           ],
           "name": "stdout"
         },
         {
           "output_type": "stream",
           "text": [
-            "Epoch 8/10 progress: 100%|######################| 78/78 [00:03<00:00, 19.85it/s]\n",
-            "Evaluating progress: 100%|######################| 10/10 [00:00<00:00, 33.03it/s]\n",
-            "Epoch 9/10 progress:   3%|5                      | 2/78 [00:00<00:03, 19.36it/s]"
+            "Epoch 8/10 progress: 100%|######################| 78/78 [00:06<00:00, 12.73it/s]\n",
+            "Evaluating progress: 100%|######################| 10/10 [00:00<00:00, 27.80it/s]\n",
+            "Epoch 9/10 progress:   3%|5                      | 2/78 [00:00<00:05, 13.47it/s]"
           ],
           "name": "stderr"
         },
         {
           "output_type": "stream",
           "text": [
-            "Epoch 7, F=63.63, p=72.53, r=56.67\n"
+            "Epoch 7, F=65.75, p=72.11, r=60.42\n"
           ],
           "name": "stdout"
         },
         {
           "output_type": "stream",
           "text": [
-            "Epoch 9/10 progress: 100%|######################| 78/78 [00:04<00:00, 19.32it/s]\n",
-            "Evaluating progress: 100%|######################| 10/10 [00:00<00:00, 33.29it/s]\n",
-            "Epoch 10/10 progress:   3%|5                     | 2/78 [00:00<00:04, 18.31it/s]"
+            "Epoch 9/10 progress: 100%|######################| 78/78 [00:06<00:00, 12.73it/s]\n",
+            "Evaluating progress: 100%|######################| 10/10 [00:00<00:00, 23.57it/s]\n",
+            "Epoch 10/10 progress:   3%|5                     | 2/78 [00:00<00:05, 12.78it/s]"
           ],
           "name": "stderr"
         },
         {
           "output_type": "stream",
           "text": [
-            "Epoch 8, F=62.74, p=72.75, r=55.16\n"
+            "Epoch 8, F=64.58, p=72.43, r=58.26\n"
           ],
           "name": "stdout"
         },
         {
           "output_type": "stream",
           "text": [
-            "Epoch 10/10 progress: 100%|#####################| 78/78 [00:04<00:00, 19.38it/s]\n",
-            "Evaluating progress: 100%|######################| 10/10 [00:00<00:00, 32.12it/s]\n",
-            "Evaluating progress:  40%|#########2             | 4/10 [00:00<00:00, 33.09it/s]"
+            "Epoch 10/10 progress: 100%|#####################| 78/78 [00:06<00:00, 12.64it/s]\n",
+            "Evaluating progress: 100%|######################| 10/10 [00:00<00:00, 28.24it/s]\n",
+            "Evaluating progress:  30%|######9                | 3/10 [00:00<00:00, 28.04it/s]"
           ],
           "name": "stderr"
         },
         {
           "output_type": "stream",
           "text": [
-            "Epoch 9, F=63.99, p=71.68, r=57.79\n"
+            "Epoch 9, F=65.08, p=71.81, r=59.51\n"
           ],
           "name": "stdout"
         },
         {
           "output_type": "stream",
           "text": [
-            "Evaluating progress: 100%|######################| 10/10 [00:00<00:00, 34.26it/s]"
+            "Evaluating progress: 100%|######################| 10/10 [00:00<00:00, 29.64it/s]"
           ],
           "name": "stderr"
         },
         {
           "output_type": "stream",
           "text": [
-            "F=63.99, p=71.68, r=57.79\n"
+            "F=65.08, p=71.81, r=59.51\n"
           ],
           "name": "stdout"
         },
