--- a/src/colab_test.ipynb
+++ b/src/colab_test.ipynb
@@ -577,6 +577,12 @@
         "    predictions = model.predict(logits)\n",
         "\n",
         "    predictions, labels = predictions.cpu().numpy(), labels.cpu().numpy()\n",
+        "    results, metrics = get_results_metrics()\n",
+        "\n",
+        "    return results, metrics, dev_loss\n",
+        "\n",
+        "\n",
+        "def get_results_metrics(predictions, labels):\n",
         "    n_correct = (predictions == labels).astype(int).sum()\n",
         "\n",
         "    # Precision, Recall\n",
@@ -599,8 +605,8 @@
         "    F, precision, recall = F_precision_recall(tp, fp, fn)\n",
         "    metrics = {'F': F, 'precision': precision, 'recall': recall}\n",
         "\n",
-        "    return results, metrics, dev_loss\n",
-        "\n",
+        "    return results, metrics\n",
+        "    \n",
         "\n",
         "def F_precision_recall(tp, fp, fn):\n",
         "    if tp + fp > 0.:\n",
@@ -760,7 +766,18 @@
         "colab": {}
       },
       "source": [
-        ""
+        "def bootstrap_conf_interval(predictions, B=10000):\n",
+        "  predictions = predictions.cpu().numpy() # (n_test,18)\n",
+        "  indices = np.arange(predictions.shape[0])\n",
+        "  N = len(predictions)\n",
+        "  for b in B:\n",
+        "    idx = np.random.choice(indices)\n",
+        "    curr_preds = predictions[idx]\n",
+        "    curr_labels = labels[idx]\n",
+        "    micro_f1 = \n",
+        "    bs_samples.append(micro_f1)\n",
+        "  \n",
+        "  np.percentile(bs_samples, [0.025, 0.975])\n"
       ],
       "execution_count": 0,
       "outputs": []
