--- a/src/colab_test.ipynb
+++ b/src/colab_test.ipynb
@@ -774,10 +774,11 @@
         "    idx = np.random.choice(indices)\n",
         "    curr_preds = predictions[idx]\n",
         "    curr_labels = labels[idx]\n",
-        "    micro_f1 = \n",
+        "    results, metrics = get_results_metrics(curr_preds, curr_labels)\n",
+        "    micro_f1 = metrics['F']\n",
         "    bs_samples.append(micro_f1)\n",
         "  \n",
-        "  np.percentile(bs_samples, [0.025, 0.975])\n"
+        "  return np.percentile(bs_samples, [0.025, 0.975])\n"
       ],
       "execution_count": 0,
       "outputs": []
